Add: Button Submit agree

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <option value="hight">Hight</option>
                 </select>
             </label>
+            <button type="submit">Add Note</button>
         </form>
     </section>
     <section class="collectNotes">
